# yutto

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _typos.toml  justfile  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api-and-downloader-test.yml  biliass-build-and-release.yml  black-fmt.yml  copilot-setup-steps.yml  e2e-test.yml  latest-release-test.yml  lint-and-fmt.yml  release-latest-test.yml  release.yml  unit-test.yml  vitepress-deploy.yml
docs/: .gitignore  .prettierignore  .prettierrc  README.md  index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sponsor.md  tsconfig.json  vite.config.ts
docs/.vitepress/: config.mts  config.ts  env.d.ts
docs/.vitepress/theme/: Layout.vue  index.css  index.ts
docs/.vitepress/theme/components/: Badge.vue  Contributors.vue  GitHubUser.vue  Sparkler.vue
docs/guide/: cli.md  faq.md  feedback.md  notice.md  quick-start.md  server.md  supported-links.md  thanks.md  tips.md
docs/guide/cli/: auth.md  basic.md  batch.md  danmaku.md  introduction.md  resource.md
docs/migration/: index.md
docs/public/: vercel.json
docs/reference/: cli.md
schemas/: config.json  schema.json
script/: get-version.py
scripts/: generate-schema.py  get-version.py
skills/bilibili-video-download/: SKILL.md
skills/bilibili-video-download/references/: command-recipes.md  supported-inputs.md
src/yutto/: __main__.py  __version__.py  _typing.py  auth.py  download_manager.py  exceptions.py  input_parser.py  login.py  mcp.py  mcp_server.py  parser.py  path_resolver.py  path_templates.py  types.py  validator.py
src/yutto/api/: bangumi.py  cheese.py  collection.py  danmaku.py  space.py  ugc_video.py  user_info.py
src/yutto/bilibili_typing/: quality.py
src/yutto/cli/: cli.py  event_renderer.py  request_adapter.py  settings.py
src/yutto/core/: __init__.py  application.py  events.py  operation.py  request.py  result.py  task_service.py
src/yutto/downloader/: downloader.py  progressbar.py  selector.py
src/yutto/extractor/: __init__.py  _abc.py  _favourite.py  bangumi.py  bangumi_batch.py  cheese.py  cheese_batch.py  collection.py  common.py  favourites.py  outcome.py  series.py  ugc_video.py  ugc_video_batch.py  user_all_favourites.py  user_all_ugc_videos.py  user_watch_later.py
src/yutto/extractor/utils/: batch.py
src/yutto/media/: codec.py  quality.py
src/yutto/processor/: downloader.py  parser.py  path_resolver.py  progressbar.py  selector.py
src/yutto/runtime/: __init__.py  tasks.py
src/yutto/server/: __init__.py  command.py  rpc.py  service.py  websocket.py
src/yutto/utils/: asynclib.py  danmaku.py  fetcher.py  ffmpeg.py  file_buffer.py  filter.py  metadata.py  subtitle.py  time.py
src/yutto/utils/console/: attributes.py  colorful.py  formatter.py  logger.py
src/yutto/utils/functional/: __init__.py  async_object.py  data_access.py  filter_none_values.py  xmerge.py
src/yutto/utils/funcutils/: __init__.py  as_sync.py  data_access.py  filter_none_value.py  functional.py  option.py  xmerge.py
tests/: conftest.py  test_auth.py  test_cli.py  test_downloader.py  test_e2e.py  test_episodes_parser.py  test_login.py
tests/test_api/: test_acg_video.py  test_bangumi.py  test_cheese.py  test_collection.py  test_danmaku.py  test_info.py  test_space.py  test_ugc_video.py  test_user_info.py
tests/test_biliass/: test_protobuf.py  test_xml.py
tests/test_core/: test_application.py  test_request.py  test_result.py  test_task_service.py
tests/test_processor/: test_audio_save_codec.py  test_batch_resolve.py  test_cli.py  test_download_lifecycle.py  test_download_result.py  test_downloader.py  test_manager_semantics.py  test_path_resolver.py  test_resolve.py  test_selector.py  test_structured_errors.py
tests/test_runtime/: test_tasks.py
tests/test_server/: test_command.py  test_rpc.py  test_service.py  test_websocket.py
tests/test_utils/: test_data_access.py  test_fetcher.py  test_ffmpeg.py  test_file_buffer.py  test_filter.py  test_path_templates.py
yutto/: __init__.py  __main__.py  __version__.py  _typing.py  exceptions.py  filter.py  typing.py  validator.py
yutto/api/: acg_video.py  bangumi.py  cheese.py  collection.py  danmaku.py  info.py  space.py  types.py  ugc_video.py  user_info.py
yutto/bilibili_typing/: codec.py  quality.py
yutto/cli/: basic.py  batch_get.py  check_options.py  checker.py  get.py
yutto/extractor/: __init__.py  _abc.py  acg_video.py  acg_video_batch.py  bangumi.py  bangumi_batch.py  cheese.py  cheese_batch.py  collection.py  common.py  favourites.py  favourites_all.py  series.py  ugc_video.py  ugc_video_batch.py  uploader_all_videos.py  user_all_favourites.py  user_all_ugc_videos.py  user_watch_later.py
yutto/media/: codec.py  quality.py
yutto/processor/: crawler.py  downloader.py  filter.py  parser.py  path_resolver.py  progressbar.py  progressor.py  selector.py  urlparser.py
yutto/utils/: asynclib.py  danmaku.py  fetcher.py  ffmpeg.py  file_buffer.py  filter.py  logger.py  metadata.py  priority.py  subtitle.py  time.py
yutto/utils/console/: attributes.py  colorful.py  formatter.py  logger.py  status_bar.py
yutto/utils/danmaku/: types.py  write_danmaku.py  xml_parser.py
yutto/utils/functiontools/: sync.py
yutto/utils/functools/: __init__.py  aobject.py  as_sync.py  filter_none_value.py  singleton.py  sync.py  xmerge.py
yutto/utils/funcutils/: __init__.py  aobject.py  as_sync.py  data_access.py  filter_none_value.py  singleton.py  xmerge.py
