[project]
name = "yutto"
version = "2.1.1"
description = "ðŸ§Š ä¸€ä¸ªå¯çˆ±ä¸”ä»»æ€§çš„ B ç«™è§†é¢‘ä¸‹è½½å™¨"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["python", "bilibili", "video", "downloader", "danmaku"]
license = { text = "GPL-3.0" }
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiofiles>=25.1.0",
  "biliass==2.3.1",
  "colorama>=0.4.6; sys_platform == 'win32'",
  "typing-extensions>=4.15.0",
  "dict2xml>=1.7.7",
  "httpx[http2,socks]>=0.28.1",
  "tomli>=2.3.0; python_version < '3.11'",
  "pydantic>=2.12.5",
  "returns>=0.26.0",
  "segno>=1.6.6",
]
optional-dependencies.mcp = ["fastmcp>=2.12.3"]

[project.urls]
Homepage = "https://github.com/yutto-dev/yutto"
Documentation = "https://github.com/yutto-dev/yutto"
Repository = "https://github.com/yutto-dev/yutto"
Issues = "https://github.com/yutto-dev/yutto/issues"

[project.scripts]
yutto = "yutto.__main__:main"

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "ruff>=0.15.0",
  "typos>=1.43.3",
  "pytest>=9.0.2",
  "pytest-rerunfailures>=16.1",
  "syrupy>=5.1.0",
  "pytest-codspeed>=4.2.0",
  "tomli>=2.3.0; python_version >= '3.11'",
]

[tool.uv.sources]
biliass = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
markers = ["api", "e2e", "processor", "biliass", "ignore", "ci_skip", "ci_only"]

[tool.pyright]
include = ["src/yutto", "packages/biliass/src/biliass", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Comprehensions
  "C4",
  # Debugger
  "T100",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Bugbear
  "B",
  # Pylint
  "PLE",
  # Flake8-simplify
  "SIM101",
  # Flake8-use-pathlib
  "PTH",
  # Pygrep-hooks
  "PGH004",
  # Flake8-type-checking
  "TC",
  # Flake8-raise
  "RSE",
  # Refurb
  "FURB",
  # Flake8-future-annotations
  "FA",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]
future-annotations = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["yutto"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["fastmcp.FastMCP.tool"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["I"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
